updated html and flexbox and added media queries

--- a/index.html
+++ b/index.html
@@ -44,19 +44,20 @@
       </section>
       <section class="my-work" id="my-work">
         <h2>My Work</h2>
+
         <div class="flex-container">
-          <div class="box-1">
-            <h3>Prework Study Guide</h3>
+          <div class="box-1 box">
+            <h3 class="project-title">Prework Study Guide</h3>
             <a href="https://laurszalk.github.io/prework-study-guide/"
               ><img
-                id="bigger-image"
+                class="bigger-image image"
                 src="./assets/images/study guide.jpg"
                 alt="Picture of notebook with notes"
               />
             </a>
           </div>
-          <div class="box-2">
-            <h3>Challenge 1</h3>
+          <div class="box-2 box">
+            <h3 class="project-title">Challenge 1</h3>
             <a href="https://laurszalk.github.io/challenge1/"
               ><img
                 class="image"
@@ -65,8 +66,8 @@
               />
             </a>
           </div>
-          <div class="box-3">
-            <h3>More to Come!</h3>
+          <div class="box-3 box">
+            <h3 class="project-title">More to Come!</h3>
             <a href="https://google.com">
               <img
                 class="image"
