updated html classes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <ul>
           <li>
@@ -22,14 +22,13 @@
           </li>
         </ul>
       </nav>
-      <div class="head-container">
-        <h1>Lauren Szalk</h1>
+      <div class="flex-container-1">
         <img
           class="avatar"
           src="./assets/images/user.png"
           alt="Picture of female avatar"
         />
-        <p class="greeting">Thanks for stopping by!</p>
+        <h1>Lauren Szalk</h1>
       </div>
     </header>
 
@@ -44,31 +43,32 @@
       </section>
       <section class="my-work" id="my-work">
         <h2>My Work</h2>
-
-        <div class="flex-container">
-          <div class="box-1 box">
+        <div class="box-1 box">
+          <h3 class="project-title">Challenge 1</h3>
+          <a href="https://laurszalk.github.io/challenge1/" target="_blank"
+            ><img
+              class="image"
+              src="./assets/images/webpage1.png"
+              alt="Screenshot of Horiseon website home page"
+            />
+          </a>
+        </div>
+        <div class="flex-container-2">
+          <div class="box-2 box">
             <h3 class="project-title">Prework Study Guide</h3>
-            <a href="https://laurszalk.github.io/prework-study-guide/"
+            <a
+              href="https://laurszalk.github.io/prework-study-guide/"
+              target="_blank"
               ><img
-                class="bigger-image image"
+                class="image"
                 src="./assets/images/study guide.jpg"
                 alt="Picture of notebook with notes"
               />
             </a>
           </div>
-          <div class="box-2 box">
-            <h3 class="project-title">Challenge 1</h3>
-            <a href="https://laurszalk.github.io/challenge1/"
-              ><img
-                class="image"
-                src="./assets/images/webpage1.png"
-                alt="Screenshot of Horiseon website home page"
-              />
-            </a>
-          </div>
           <div class="box-3 box">
             <h3 class="project-title">More to Come!</h3>
-            <a href="https://google.com">
+            <a href="https://google.com" target="_blank">
               <img
                 class="image"
                 src="./assets/images/womancoding.jpg"
